<resources>
    <string name="app_name">XiangYin</string>
    <string name="wenku">文库</string>
    <string name="yinpan">印盘</string>
    <string name="my">我的</string>
    <string name="trash">废纸篓</string>
    <string name="select_retailer">选择商家</string>
    <string name="print_order">服务订单</string>
    <string name="user_info">个人资料</string>

    <!-- welcome_page-->
    <string name="welcome_sign">欢迎广告页</string>
    <string name="sign">签到</string>
    <string name="print_moneyr">我的印币</string>

    <!-- login page -->
    <string name="login_forget_password">忘记密码?</string>
    <string name="login_new_user_regist">新用户注册</string>
    <string name="login_login">马上登录</string>
    <string name="login_third">使用第三方登录</string>
    <string name="login_phone">手机号:</string>
    <string name="login_password">密码:</string>

    <!-- signup page -->
    <string name="signup_phone">手机号: </string>
    <string name="signup_password">密码:  </string>
    <string name="signup_password_confirm">确认密码：</string>
    <string name="signup_enter_codes">输入验证码:</string>
    <string name="signup_get_codes">获取验证码</string>
    <string name="signup_agreement">我接受</string>
    <string name="signup_user_agreement">《用户协议》</string>
    <string name="signup_user">已拥有账户</string>
    <string name="signup_signup">马上注册</string>
    <string name="signup_sended">信息已发送</string>
    <string name="signup_signup_success">注册成功</string>
    <string name="signup_password_not_same">密码不一致</string>
    <string name="signup_agree">请接受《用户协议》</string>

    <!-- password page -->
    <string name="password_forget">忘记密码</string>
    <string name="password_new">新密码:</string>
    <string name="password_confirm">确认新密码:</string>
    <string name="password_modified">马上找回</string>
    <string name="password_sended">信息已发送</string>
    <string name="password_password_not_same">密码不一致</string>
    <string name="password_success">修改密码成功</string>

    <!-- tab widget text -->
    <string name="tab_index">首页</string>
    <string name="tab_yinpan">印盘</string>
    <string name="tab_wenku">文库</string>
    <string name="tab_user">我</string>

    <!-- feedback page -->
    <string name="feedback_toolbar">意见反馈</string>
    <string name="feedback_title">反馈标题</string>
    <string name="feedback_content">反馈内容</string>
    <string name="feedback_title_hint">4-25个字</string>
    <string name="feedback_content_hint">请输入您对产品的意见，我们将不断优化体验</string>
    <string name="feedback_commit">提交反馈</string>
    <string name="feedback_submit_success">提交成功</string>

    <!-- password modified page -->
    <string name="pw_mdf_toolbar">修改密码</string>
    <string name="pw_mdf_old">旧密码:</string>
    <string name="pw_mdf_new">新密码:</string>
    <string name="pw_mdf_cfm">确认密码:</string>
    <string name="pw_mdf_cfm_mdf">确认修改</string>
    <string name="pw_mdf_password_not_same">密码不一致</string>
    <string name="pw_mdf_success">修改密码成功</string>

    <!-- tel modified page -->
    <string name="mdf_tel_toolbar">更换手机号</string>
    <string name="mdf_tel_old">原手机号：</string>
    <string name="mdf_tel_new">新手机号：</string>
    <string name="mdf_tel_cfm">确认更换</string>
    <string name="mdf_tel_success">修改成功</string>

    <!-- wechat login -->
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>

    <!-- user page -->
    <string name="my_dingdan">我的订单</string>
    <string name="my_jifen">我的印币</string>
    <string name="my_ziliao">个人资料</string>
    <string name="my_xiaoxi">我的消息</string>
    <string name="my_dizhi">收货地址</string>
    <string name="my_fankui">服务与反馈</string>
    <string name="my_shezhi">设置</string>
    <string name="my_default_description">这个人很懒什么都没留下</string>

    <!-- settings page -->
    <string name="settinngs_toolbar">设置</string>
    <string name="settings_mdf_pw">密码修改</string>
    <string name="settings_about_xy">关于享印</string>
    <string name="settings_sign_out">退出登录</string>

    <!-- new address page -->
    <string name="myaddr_toolbar">收货地址</string>
    <string name="newaddr_toolbar">新建收货地址</string>
    <string name="newaddr_name">收&#160;&#160;货&#160;&#160;人：</string>
    <string name="newaddr_tel">手&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;机：</string>
    <string name="newaddr_zipcode">邮政编码：</string>
    <string name="newaddr_location">所在地区：</string>
    <string name="newaddr_street">街&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;道：</string>
    <string name="newaddr_address">详细地址：</string>
    <string name="newaddr_school">学&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;校：</string>
    <string name="newaddr_school_location">所在校区:</string>
    <string name="newaddr_save">保存地址</string>
    <string name="newaddr_submit_success">提交成功</string>

    <!-- address list -->
    <string name="address_list_toolbar">收货地址</string>

    <!-- my messae page -->
    <string name="mymsg_toolbar">我的消息</string>
    <string name="mymsg_reward">悬赏消息</string>
    <string name="mymsg_system">系统消息</string>


    <!-- wenku -->
    <string name="wenku_writer">作者:</string>
    <string name="wenku_page">页数:</string>
    <string name="wenku_package">裝订:</string>
    <string name="wenku_size">尺寸:</string>
    <string name="wenku_flash">閃一份</string>
    <string name="wenku_input_key_word">请输入关键字</string>

    <!-- yinpan -->
    <string name="yinpan_share">分享</string>
    <string name="yinpan_download">下载</string>
    <string name="yinpan_move">移动</string>
    <string name="yinpan_rename">重命名</string>
    <string name="yinpan_delete">刪除</string>
    <string name="yinpan_new_tab">新建标签</string>
    <string name="yinpan_trash">废纸篓</string>
    <string name="yinpan_offline">离线文件</string>
    <string name="yinpan_upload">上传文件</string>
    <string name="yinpan_print">打印</string>
    <string name="yinpan_ok">确认</string>
    <string name="yinpan_cancel">取消</string>
    <string name="yinpan_rename_success">重命名成功</string>
    <string name="yinpan_start_download">开始下载</string>
    <string name="yinpan_finish_download">完成下载</string>
    <string name="yinpan_error_download">下载失败</string>
    <string name="yinpan_finish_upload">上传成功</string>
    <string name="yinpan_error_upload">上传失败</string>
    <string name="yinpan_cancel_upload">取消上传</string>
    <string name="yinpan_name">名称</string>
    <string name="yinpan_date">时间</string>

    <!-- yinpan trash -->
    <string name="trash_all_selected">全选</string>
    <string name="trash_restore">还原文件</string>
    <string name="trash_fully_delete">彻底刪除</string>

    <!-- user info -->
    <string name="user_info_toolbar">个人资料</string>
    <string name="user_info_head">头像：</string>
    <string name="user_info_nickname">昵称：</string>
    <string name="user_info_name">姓名：</string>
    <string name="user_info_tel">手机号：</string>
    <string name="user_info_sex">性别：</string>
    <string name="user_info_school">学校：</string>
    <string name="user_info_time">入学年限：</string>
    <string name="user_info_myaddr">我的地址：</string>
    <string name="user_info_sign">个性签名：</string>
    <string name="user_info_mdftel">更换手机号</string>
    <string name="user_info_sign_edit">这个人很懒什么都没留下</string>
    <string name="user_info_save">保存</string>
    <string name="user_info_male">男</string>
    <string name="user_info_female">女</string>
    <string name="user_info_save_success">保存成功</string>

    <!-- print order -->
    <string name="print_order_real_pay">实付款:</string>
    <string name="print_order_submit_order">提交订单</string>
    <string name="print_order_send_method">送货方式</string>
    <string name="print_order_take_by_myself">自取</string>
    <string name="print_order_deliver_to_home">送货上门</string>
    <string name="print_order_select_deliver_time">(选择送达时间)</string>
    <string name="print_order_delete_file">移除文件</string>
    <string name="print_order_set">份</string>
    <string name="print_order_price">金额:</string>
    <string name="print_order_to">至</string>
    <string name="print_order_page">页数:</string>
    <string name="print_order_specification">装订:</string>
    <string name="print_order_address">收货地址</string>
    <string name="print_order_change_address">修改收货地址</string>
    <string name="print_order_discount">优惠兑換</string>
    <string name="print_order_account_coin">账户印币:</string>
    <string name="print_order_use">使用</string>
    <string name="print_order_not_use">不使用</string>
    <string name="print_order_input_coin_to_discount">输入印币数进行打印扺扣</string>
    <string name="print_order_coin">印币</string>
    <string name="print_order_total">打印总金额:</string>
    <string name="print_order_total_discount">折扣金额:</string>
    <string name="print_order_add_continue">继续添加</string>
    <string name="print_order_add_yin_pan">从印盘添加</string>
    <string name="print_order_add_wen_ku">从文库添加</string>
    <string name="print_order_shoot_picture">拍照打印</string>
    <string name="print_order_total_price">总价:</string>
    <string name="print_order_totalword">共</string>
    <string name="print_order_goods">件商品</string>

    <!-- select retailer -->
    <string name="select_retailer_select">确认选择</string>
    <string name="select_retailer_have_not_select">尚未选择商家</string>

    <!-- welcome_sign -->
    <string name="welcome_sign_skip">跳过广告</string>
    <string name="welcome_sign_money">签到赚印币</string>
    <string name="welcome_sign_sign">签到</string>
    <string name="welcome_sign_action">心动不如行动</string>
    <string name="welcome_sign_signed">已签到</string>

    <!-- sign -->
    <string name="sign_text_one">1</string>
    <string name="sign_text_two">2</string>
    <string name="sign_text_three">3</string>
    <string name="sign_text_four">4</string>
    <string name="sign_text_five">5</string>
    <string name="sign_view_grade">查看积分</string>
    <string name="sign_already_sign">已签到</string>
    <string name="sign_day">天</string>
    <string name="sign_contiune_sign">连续签到</string>
    <string name="sign_contiune_sign_text">天就可以把印币放入保险箱了!</string>
    <string name="sign_integral">积分</string>


    <!-- My print money -->
    <string name="print_money_sign_text">签到赚印币</string>
    <string name="print_money_sign_rule">签到印币规则</string>
    <string name="print_money_sign_break">亲，签到中断可是会扣除临时印币的呦！</string>

    <!-- All order -->
    <string name="all_order_all">全部</string>
    <string name="all_order_wait_paid">待付款</string>
    <string name="all_order_wait_receive">待收货</string>
    <string name="all_order_completed">已完成</string>
    <string name="all_order_page">页数:</string>
    <string name="all_order_specification">装订:</string>
    <string name="all_order_totalword">共</string>
    <string name="all_order_goods">件商品</string>
    <string name="all_order_print_total_price">打印总金额:</string>
    <string name="all_order_discount_price">折扣金额:</string>
    <string name="all_order_delivery_price">运费:</string>
    <string name="all_order_real_pay">实付款:</string>
    <string name="all_order_cancel_order">取消订单</string>
    <string name="all_order_complete_pay">完成支付</string>
    <string name="all_order_sure_receive">确认收货</string>
    <string name="all_order_submit_order_time">下单时间:</string>
    <string name="all_order_pageword">页</string>
    <string name="all_order_typeword">份</string>

    <!-- specification -->
    <string name="specification_1">A3彩色</string>
    <string name="specification_2">A3黑白</string>
    <string name="specification_3">A4彩色</string>
    <string name="specification_4">A4黑白</string>
    <string name="specification_5">彩色照片</string>
    <string name="specification_double">双面</string>
    <string name="specification_single">单面</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
