<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/all_order_list_header_height"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <CheckBox
            android:id="@+id/cb_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <ImageView
            android:layout_width="@dimen/all_order_list_header_icon_height"
            android:layout_height="@dimen/all_order_list_header_icon_height"
            android:src="@mipmap/shop"/>
        <TextView
            android:id="@+id/tv_retailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/iv_status"
            android:layout_width="@dimen/all_order_list_header_height"
            android:layout_height="@dimen/all_order_list_header_height" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_copyitem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>


    <LinearLayout
        android:id="@+id/ll_printingitem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_order_totalword"/>
        <TextView
            android:id="@+id/tv_types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_order_goods"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_order_print_total_price"/>
        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_red"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_order_discount_price"/>
        <TextView
            android:id="@+id/tv_discount_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_red"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_order_delivery_price"/>
        <TextView
            android:id="@+id/tv_delivery_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_red"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/all_order_list_item_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_order_real_pay"/>
        <TextView
            android:id="@+id/tv_real_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_red" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <LinearLayout
            android:id="@+id/ll_unpaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/all_order_list_footer_button_height"
                android:text="@string/all_order_cancel_order"
                android:background="@drawable/btn_gray_corner"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/all_order_list_footer_button_height"
                android:text="@string/all_order_complete_pay"
                android:background="@drawable/btn_blue_corner"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_unreceived"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/all_order_list_footer_button_height"
                android:text="@string/all_order_sure_receive"
                android:background="@drawable/btn_green_corner"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_order_submit_order_time"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>